# SudokuCube

./: .gitignore  CMakeLists.txt  ClickableRect.qml  ColorModel.cpp  ColorModel.h  Colors.js  CornerVariantModel.cpp  CornerVariantModel.h  CubeFaceModel.cpp  CubeFaceModel.h  CubeFaceRerpresentation.qml  CubeModel.cpp  CubeModel.h  EdgeVariantModel.cpp  EdgeVariantModel.h  FaceCoords.cpp  FaceCoords.h  FaceVariantModel.cpp  FaceVariantModel.h  IntVec3d.cpp  IntVec3d.h  README.md  VariantModel.cpp  VariantModel.h  VariantRepeater.qml  main.cpp  main.qml  qml.qrc
.github/workflows/: cmake-multi-platform.yml
solutions/: comparison.org  solutions.org
src/: CMakeLists.txt  CubeFaceModel.cpp  CubeModel.cpp  EdgeVariantModel.h  FaceCoords.cpp  FaceVariantModel.cpp  FaceVariantModel.h  VariantModel.cpp  main.cpp  main.qml  qml.qrc
